# nodeimg

./: .$nodeimg-architecture.drawio.bkp  .gitignore  CLAUDE.md  Cargo.toml  README.md  nodeimg-architecture.drawio
crates/nodeimg-app/: Cargo.toml
crates/nodeimg-app/src/: app.rs  app_state.rs  execution.rs  lib.rs  main.rs
crates/nodeimg-app/src/gpu/: mod.rs  pipeline.rs  texture.rs
crates/nodeimg-app/src/node/: ai_task.rs  backend.rs  cache.rs  category.rs  constraint.rs  eval.rs  graph_controller.rs  menu.rs  mod.rs  registry.rs  serial.rs  types.rs  viewer.rs
crates/nodeimg-app/src/processing/: generate.rs  mod.rs
crates/nodeimg-app/src/theme/: dark.rs  light.rs  tokens.rs
crates/nodeimg-app/src/ui/: mod.rs  node_canvas.rs
crates/nodeimg-engine/: Cargo.toml
crates/nodeimg-engine/src/: ai_task.rs  backend.rs  cache.rs  eval.rs  lib.rs  menu.rs  registry.rs
crates/nodeimg-engine/src/builtins/: blend.rs  blur.rs  channel_merge.rs  checkerboard.rs  color_adjust.rs  color_balance.rs  crop.rs  curves.rs  denoise.rs  distort.rs  edge_detect.rs  emboss.rs  film_grain.rs  flip.rs  gradient.rs  histogram.rs  hue_saturation.rs  invert.rs  levels.rs  load_image.rs  lut_apply.rs  mask.rs  mod.rs  noise.rs  pixelate.rs  preview.rs  resize.rs  rotate.rs  save_image.rs  sharpen.rs  solid_color.rs  threshold.rs  vignette.rs
crates/nodeimg-engine/src/internal/: ai_task.rs  backend.rs  eval.rs  menu.rs  mod.rs  registry.rs
crates/nodeimg-engine/src/transport/: local.rs  mod.rs
crates/nodeimg-engine/tests/: builtin_registration.rs  cpu_nodes.rs  gpu_nodes.rs  pipelines.rs
crates/nodeimg-engine/tests/helpers/: mod.rs
engine/: Cargo.toml  build.rs
engine/src/: graph_controller.rs  lib.rs
engine/src/artifact/: README.md  manager.rs  mod.rs
engine/src/artifact/handler/: handler.rs  image.rs  mod.rs  registry.rs
engine/src/artifact/lifecycle/: cleaner.rs  exporter.rs  mod.rs  restorer.rs  selector.rs  validator.rs
engine/src/artifact/model/: error.rs  mod.rs  record.rs  request.rs  stats.rs
engine/src/artifact/persistence/: index.rs  index_file.rs  mod.rs  store.rs
engine/src/builtins/: mod.rs
engine/src/builtins/brightness/: mod.rs  shader.wgsl
engine/src/builtins/contrast/: mod.rs  shader.wgsl
engine/src/builtins/load_image/: mod.rs
engine/src/builtins/save_image/: mod.rs
engine/src/cache/: README.md  manager.rs  mod.rs
engine/src/cache/model/: budget.rs  cache_key.rs  cache_policy.rs  error.rs  event.rs  exec_signature.rs  generation_id.rs  mod.rs  preview_request.rs  result_entry.rs  stats.rs  texture_entry.rs
engine/src/cache/release_queue/: mod.rs  queue.rs  releaser.rs  retry_policy.rs
engine/src/cache/result_store/: bytes.rs  eviction.rs  lru.rs  (+4 more)
engine/src/graph/: editor.rs  mod.rs  topology.rs  validate.rs  version.rs
engine/src/node_manager/: README.md  manager.rs  mod.rs
engine/src/registry/: def.rs  inventory_collect.rs  mod.rs
engine/tests/: integration.rs
gui/: Cargo.toml
gui/src/: context.rs  controller.rs  demo.rs  lib.rs  main 2.rs  main.rs  panel.rs  preview.rs  state 2.rs  state.rs  statusbar.rs  toolbar.rs
gui/src/canvas/: background.rs  camera.rs  canvas.rs  connection.rs  controller 2.rs  controller.rs  event.rs  mod.rs  node.rs  node_card.rs  pan.rs  popup.rs  render.rs  renderer.rs  state.rs
gui/src/controls/: mod.rs
gui/src/gesture/: arena.rs  drag.rs  kind.rs  long_press.rs  mod.rs  recognizer.rs  resize.rs  tap.rs
gui/src/mock/: mod.rs
gui/src/panel/: drag.rs  event.rs  frame.rs  hit.rs  layer.rs  mod.rs  renderer.rs  resize.rs
gui/src/panel_tree/: desc.rs  diff.rs  layout.rs  mod.rs  node.rs  paint.rs
gui/src/panels/: mod.rs  preview.rs  toolbar.rs
gui/src/render/: background.rs  connection.rs  mod.rs  node.rs
gui/src/renderer/: blit.rs  blur.rs  buffer.rs  circle.rs  command.rs  corner.rs  curve.rs  dispatch.rs  image.rs  mod.rs  prepare.rs  quad.rs  renderer.rs  shadow.rs  stencil.rs  style.rs  svg.rs  text.rs  text_measurer.rs  types.rs
gui/src/shell/: app.rs  context.rs  cursor.rs  event.rs  gpu.rs  mod.rs  runner.rs  surface.rs  translator.rs  window.rs
gui/src/theme/: mod.rs
gui/src/tree/: desc.rs  diff.rs  hit.rs  layout_adapter.rs  mod.rs  node.rs  paint.rs  scroll.rs  tree.rs
gui/src/widget/: action 2.rs  action.rs  desc.rs  mapping 2.rs  mod 2.rs  mod.rs  node 2.rs  props.rs  resize_edge.rs  state 2.rs  state.rs  text_edit.rs  trait.rs
gui/src/widgets/: floating 2.rs  mod.rs  slider.rs
(+412 files in other folders)
