[workspace]
members = [
    "crates/nodeimg-app",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
