[workspace]
members = ["types", "engine", "macros", "gui", "app"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
inventory = "0.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
pollster = "0.4"
