[package]
name = "engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { workspace = true }
types = { path = "../types" }
macros = { path = "../macros" }
wgpu = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
inventory = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
pollster = { workspace = true }
