[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nodeimg"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["canvas", "wgpu", "tokio", "image"] }
engine = { path = "../engine" }
types = { path = "../types" }
wgpu = { workspace = true }
pollster = { workspace = true }
