[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glyphon = "0.10"
lyon = "1"
resvg = "0.44"
image = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
