[package]
name = "nodeimg-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nodeimg"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui_extras = { version = "0.33", features = ["image", "file"] }
egui-snarl = { version = "0.9", features = ["serde"] }
wgpu = "27"
serde_json = "1"
rfd = "0.17"
nodeimg-types = { path = "../nodeimg-types" }
nodeimg-gpu = { path = "../nodeimg-gpu" }
nodeimg-engine = { path = "../nodeimg-engine" }
