[package]
name = "nodeimg-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nodeimg-types = { path = "../nodeimg-types" }
nodeimg-gpu = { path = "../nodeimg-gpu" }
nodeimg-processing = { path = "../nodeimg-processing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
